--- a/AA_ENC.ini
+++ b/AA_ENC.ini
@@ -1,5 +1,5 @@
 [AAtoBuy]
-AACount=200
+AACount=201
 AA1=Gate|M|2
 AA2=Mnemonic Rentension|M|2
 AA3=Combat Agility|m|1
@@ -37,166 +37,167 @@ AA34=Hastened Second Spire of Enchantment|m|3
 AA35=Crippling Aurora|M|3
 AA36=Hastened Crippling Aurora|m|3
 AA37=Glyph Spray|M|3
-AA38=Illusions of Grandeur|M|3
-AA39=Ethereal Manipulation|m|3
-AA40=Nightmare Stasis|M|3
-AA41=Hastened Nightmare Stasis|m|3
-AA42=Beam of Slumber|m|3
-AA43=Blanket of Forgetfulness|M|3
-AA44=Fog of Memories|M|3
-AA45=Arcane Whisper|m|3
-AA46=Scintillating Beam|m|3
-AA47=Soothing Words|m|3
-AA48=Bite of Tashani|M|3
-AA49=Dreary Deeds|M|3
-AA50=Extended Dreary Deeds|m|3
-AA51=Beguiler's Banishment|M|3
-AA52=Beguiler's DirectedBanishment|M|3
-AA53=Stasis|m|3
-AA54=Quicken Stasis|M|3
-AA55=Eldritch Rune|M|3
-AA56=Hasten Eldritch Rune|m|3
-AA57=Rune of Banishment|M|3
-AA58=Reactive Rune|M|3
-AA59=Improved Reactive Rune|M|3
-AA60=Self Stasis|M|3
-AA61=Hasten Self Stasis|M|3
-AA62=Dimensional Instability|M|3
-AA63=Dimensional Shield|m|3
-AA64=Chromatic Haze|m|3
-AA65=Color Shock|m|3
-AA66=Perfected Invisibility|M|3
-AA67=PerfectedI nvisibility to Undead|M|3
-AA68=Perfected Levitation|M|2
-AA69=Group Perfected Levitation|M|3
-AA70=Group Perfected Invisibility|M|3
-AA71=Group Perfected Invisibility to Undead|M|3
-AA72=Mind Over Matter|M|3
-AA73=Veil of Mindshadow|M|3
-AA74=Hasten Veil of Mindshadow|m|3
-AA75=Surreality|m|3
-AA76=Friendly Stasis|M|3
-AA77=Mental Contortion|M|3
-AA78=Hastened Mental Contortion|m|3
-AA79=Spell Casting Fury|m|2
-AA80=Twincast|m|3
-AA81=Improved Twincast|m|3
-AA82=Hastened Improved Twincast|m|3
-AA83=Chromatic Haze|M|3
-AA84=Calculated Insanity|m|3
-AA85=Hastened Calculated Insanity|m|3
-AA86=Critical Affliction|M|2
-AA87=Destructive Cascade|m|3
-AA88=Vengeful Spirits|m|3
-AA89=Destructive Fury|m|2
-AA90=Fury of Magic|m|2
-AA91=Focus of Arcanum|m|3
-AA92=Acute Focus of Arcanum|m|3
-AA93=Empowered Focus of Arcanum|m|3
-AA94=Enlightened Focus of Arcanum|m|3
-AA95=Silent Casting|m|2
-AA96=Quickened Silent Casting|m|2
-AA97=Hastened Silent Casting|m|2
-AA98=Extended Silent Casting|m|3
-AA99=Illusory Ally|M|3
-AA100=Phantasmal Opponent|M|3
-AA101=Hasten Phantom Opponent|M|3
-AA102=Doppel ganger|m|3
-AA103=Doppel ganger's Beckon|m|3
-AA104=Mana Overburn|m|3
-AA105=Mind Over Matter|m|3
-AA106=Nightmare Stasis|m|3
-AA107=Pet Affinity|M|2
-AA108=Pet Discipline|M|3
-AA109=Persistent Minion|M|2
-AA110=Summon Companion|m|2
-AA111=FortifyCompanion|M|2
-AA112=Companion's Blessing|m|2
-AA113=Companion's Durability|m|2
-AA114=Companion's Fury|m|2
-AA115=Hastened Companion's Blessing|m|2
-AA116=Hastened Forceful Rejuvenation|m|2
-AA117=Hastened Fortify Companion|m|2
-AA118=Animation Empathy|M|3
-AA119=Sturdy Companion|m|3
-AA120=Suspended Minion|M|3
-AA121=Companion's Agility|m|3
-AA122=Companion's Relocation|m|3
-AA123=Hastened Companion's Relocation|m|3
-AA124=Quickened Suspend Minion|m|3
-AA125=Permanebt Illusion|M|3
-AA126=Project Illusion|M|3
-AA127=Sanguine Mind Crystal|M|3
-AA128=Azure Mind Crystal|M|3
-AA129=Intrinsic Efficiency|M|2
-AA130=Hastened First Spire of Enchantment|m|3
-AA131=Hastened Third Spire of Enchantment|m|3
-AA132=Profound Visage|M|3
-AA133=Edict of Command|M|3
-AA134=Dire Charm|M|3
-AA135=Total Domination|m|3
-AA136=Hastened Divine Companion Aura|m|3
-AA137=Hastened Edict of Command|m|3
-AA138=Identify|M|3
-AA139=BindSight|M|3
-AA140=Extended Swarm|m|3
-AA141=Mass Enchant Dwerium
-AA142=Enchant Cosgrite|M|3
-AA143=Mass Enchant Cosgrite|M|3
-AA144=Enchant Palladium
-AA145=Enchant Palladium Trio
-AA146=Greater Mass Enchant Palladium
-AA147=Quick Draw|m|1
-AA148=Mental Fortitude|m|1
-AA149=Mystical Shield|M|1
-AA150=Planar Power|M|1
-AA151=Planar Agility|m|1
-AA152=Planar Charisma|m|1
-AA153=Planar Dexterity|m|1
-AA154=Planar Intelligence|m|1
-AA155=Planar Stamina|m|1
-AA156=Planar Strength|m|1
-AA157=Planar Wisdom|m|1
-AA158=ForcefulRejuvenation|M|2
-AA159=SilentCasting|M|2
-AA160=SummonCompanion|M|2
-AA161=DivineCompanionAura|M|2
-AA162=Staff Block|m|2
-AA163=Spell Casting Expertise
-AA164=Mastery of the Past|m|2
-AA165=Arcane Tongues|m|2
-AA166=Bind Affinity|m|2
-AA167=Salvage|m|1
-AA168=New Tanaan Crafting Mastery|m|1
-AA169=Baking Mastery|m|1
-AA170=Blacksmithing Mastery|m|1
-AA171=Brewing Mastery|m|1
-AA172=Fletching Mastery|m|1
-AA173=Jewel Craft Mastery|m|1
-AA174=Pottery Mastery|m|1
-AA175=Tailoring Mastery|m|1
-AA176=Packrat|m|1
-AA177=Identify|m|1
-AA178=Combat Medic|m|1
-AA179=Delay Death|m|1
-AA180=Energetic Attunement|m|1
-AA181=First Aid|m|1
-AA182=Bandage Wounds|m|1
-AA183=Battle Ready|m|1
-AA184=Innate Lung Capacity|m|1
-AA185=Innate Agility|m|1
-AA186=Innate Charisma|m|1
-AA187=Innate Cold Protection|m|1
-AA188=Innate Corruption Protection|m|1
-AA189=Innate Dexterity|m|1
-AA190=Innate Disease Protection|m|1
-AA191=Innate Fire Protection|m|1
-AA192=Innate Intelligence|m|1
-AA193=Innate Magic Protection|m|1
-AA194=Innate Poison Protection|m|1
-AA195=Innate Regeneration|m|1
-AA196=Innate See Invis|m|1
-AA197=Innate Stamina|m|1
-AA198=Innate Strength|m|1
-AA199=Innate Wisdom|m|1
-AA200=Divine Companion Aura|m|2
+AA38=Hasten Glyph Spray|M|3
+AA39=Illusions of Grandeur|M|3
+AA40=Ethereal Manipulation|m|3
+AA41=Nightmare Stasis|M|3
+AA42=Hastened Nightmare Stasis|m|3
+AA43=Beam of Slumber|m|3
+AA44=Blanket of Forgetfulness|M|3
+AA45=Fog of Memories|M|3
+AA46=Arcane Whisper|m|3
+AA47=Scintillating Beam|m|3
+AA48=Soothing Words|m|3
+AA49=Bite of Tashani|M|3
+AA50=Dreary Deeds|M|3
+AA51=Extended Dreary Deeds|m|3
+AA52=Beguiler's Banishment|M|3
+AA53=Beguiler's DirectedBanishment|M|3
+AA54=Stasis|m|3
+AA55=Quicken Stasis|M|3
+AA56=Eldritch Rune|M|3
+AA57=Hasten Eldritch Rune|m|3
+AA58=Rune of Banishment|M|3
+AA59=Reactive Rune|M|3
+AA60=Improved Reactive Rune|M|3
+AA61=Self Stasis|M|3
+AA62=Hasten Self Stasis|M|3
+AA63=Dimensional Instability|M|3
+AA64=Dimensional Shield|m|3
+AA65=Chromatic Haze|m|3
+AA66=Color Shock|m|3
+AA67=Perfected Invisibility|M|3
+AA68=PerfectedI nvisibility to Undead|M|3
+AA69=Perfected Levitation|M|2
+AA70=Group Perfected Levitation|M|3
+AA71=Group Perfected Invisibility|M|3
+AA72=Group Perfected Invisibility to Undead|M|3
+AA73=Mind Over Matter|M|3
+AA74=Veil of Mindshadow|M|3
+AA75=Hasten Veil of Mindshadow|m|3
+AA76=Surreality|m|3
+AA77=Friendly Stasis|M|3
+AA78=Mental Contortion|M|3
+AA79=Hastened Mental Contortion|m|3
+AA80=Spell Casting Fury|m|2
+AA81=Twincast|m|3
+AA82=Improved Twincast|m|3
+AA83=Hastened Improved Twincast|m|3
+AA84=Chromatic Haze|M|3
+AA85=Calculated Insanity|m|3
+AA86=Hastened Calculated Insanity|m|3
+AA87=Critical Affliction|M|2
+AA88=Destructive Cascade|m|3
+AA89=Vengeful Spirits|m|3
+AA90=Destructive Fury|m|2
+AA91=Fury of Magic|m|2
+AA92=Focus of Arcanum|m|3
+AA93=Acute Focus of Arcanum|m|3
+AA94=Empowered Focus of Arcanum|m|3
+AA95=Enlightened Focus of Arcanum|m|3
+AA96=Silent Casting|m|2
+AA97=Quickened Silent Casting|m|2
+AA98=Hastened Silent Casting|m|2
+AA99=Extended Silent Casting|m|3
+AA100=Illusory Ally|M|3
+AA101=Phantasmal Opponent|M|3
+AA102=Hasten Phantom Opponent|M|3
+AA103=Doppel ganger|m|3
+AA104=Doppel ganger's Beckon|m|3
+AA105=Mana Overburn|m|3
+AA106=Mind Over Matter|m|3
+AA107=Nightmare Stasis|m|3
+AA108=Pet Affinity|M|2
+AA109=Pet Discipline|M|3
+AA110=Persistent Minion|M|2
+AA111=Summon Companion|m|2
+AA112=FortifyCompanion|M|2
+AA113=Companion's Blessing|m|2
+AA114=Companion's Durability|m|2
+AA115=Companion's Fury|m|2
+AA116=Hastened Companion's Blessing|m|2
+AA117=Hastened Forceful Rejuvenation|m|2
+AA118=Hastened Fortify Companion|m|2
+AA119=Animation Empathy|M|3
+AA120=Sturdy Companion|m|3
+AA121=Suspended Minion|M|3
+AA122=Companion's Agility|m|3
+AA123=Companion's Relocation|m|3
+AA124=Hastened Companion's Relocation|m|3
+AA125=Quickened Suspend Minion|m|3
+AA126=Permanebt Illusion|M|3
+AA127=Project Illusion|M|3
+AA128=Sanguine Mind Crystal|M|3
+AA129=Azure Mind Crystal|M|3
+AA130=Intrinsic Efficiency|M|2
+AA131=Hastened First Spire of Enchantment|m|3
+AA132=Hastened Third Spire of Enchantment|m|3
+AA133=Profound Visage|M|3
+AA134=Edict of Command|M|3
+AA135=Dire Charm|M|3
+AA136=Total Domination|m|3
+AA137=Hastened Divine Companion Aura|m|3
+AA138=Hastened Edict of Command|m|3
+AA139=Identify|M|3
+AA140=BindSight|M|3
+AA141=Extended Swarm|m|3
+AA142=Mass Enchant Dwerium
+AA143=Enchant Cosgrite|M|3
+AA144=Mass Enchant Cosgrite|M|3
+AA145=Enchant Palladium
+AA146=Enchant Palladium Trio
+AA147=Greater Mass Enchant Palladium
+AA148=Quick Draw|m|1
+AA149=Mental Fortitude|m|1
+AA150=Mystical Shield|M|1
+AA151=Planar Power|M|1
+AA152=Planar Agility|m|1
+AA153=Planar Charisma|m|1
+AA154=Planar Dexterity|m|1
+AA155=Planar Intelligence|m|1
+AA156=Planar Stamina|m|1
+AA157=Planar Strength|m|1
+AA158=Planar Wisdom|m|1
+AA159=ForcefulRejuvenation|M|2
+AA160=SilentCasting|M|2
+AA161=SummonCompanion|M|2
+AA162=DivineCompanionAura|M|2
+AA163=Staff Block|m|2
+AA164=Spell Casting Expertise
+AA165=Mastery of the Past|m|2
+AA166=Arcane Tongues|m|2
+AA167=Bind Affinity|m|2
+AA168=Salvage|m|1
+AA169=New Tanaan Crafting Mastery|m|1
+AA170=Baking Mastery|m|1
+AA171=Blacksmithing Mastery|m|1
+AA172=Brewing Mastery|m|1
+AA173=Fletching Mastery|m|1
+AA174=Jewel Craft Mastery|m|1
+AA175=Pottery Mastery|m|1
+AA176=Tailoring Mastery|m|1
+AA177=Packrat|m|1
+AA178=Identify|m|1
+AA179=Combat Medic|m|1
+AA180=Delay Death|m|1
+AA181=Energetic Attunement|m|1
+AA182=First Aid|m|1
+AA183=Bandage Wounds|m|1
+AA184=Battle Ready|m|1
+AA185=Innate Lung Capacity|m|1
+AA186=Innate Agility|m|1
+AA187=Innate Charisma|m|1
+AA188=Innate Cold Protection|m|1
+AA189=Innate Corruption Protection|m|1
+AA190=Innate Dexterity|m|1
+AA191=Innate Disease Protection|m|1
+AA192=Innate Fire Protection|m|1
+AA193=Innate Intelligence|m|1
+AA194=Innate Magic Protection|m|1
+AA195=Innate Poison Protection|m|1
+AA196=Innate Regeneration|m|1
+AA197=Innate See Invis|m|1
+AA198=Innate Stamina|m|1
+AA199=Innate Strength|m|1
+AA200=Innate Wisdom|m|1
+AA201=Divine Companion Aura|m|2
