--- a/AA_ENC.ini
+++ b/AA_ENC.ini
@@ -2,15 +2,15 @@
 AACount=200
 AA1=Gate|M|2
 AA2=Mnemonic Rentension|M|2
-AA3=Combat Agility|m|1
-AA4=Combat Stability|m|1
-AA5=Discordant Defiance|m|1
-AA6=General Sturdiness|m|1
-AA7=Natural Durability|M|1
+AA3=Planar Intelligence|m|1
+AA4=Critical Affliction|M|2
+AA5=Destructive Cascade|m|3
+AA6=Pet Affinity|M|2
+AA7=Permanent Illusion|M|3
 AA8=Mystical Attuning|M|1
-AA9=Mental Clarity|m|2
-AA10=Mental Stamina|m|2
-AA11=Expansive Mind|m|2
+AA9=Total Domination|m|3
+AA10=Staff Block|m|2
+AA11=Sanguine Mind Crystal|M|3
 AA12=Persistent Casting|m|2
 AA13=Spell Casting Mastery|M|2
 AA14=Spell Casting Reinforcement|M|2
@@ -85,8 +85,8 @@ AA82=Hastened Improved Twincast|m|3
 AA83=Chromatic Haze|M|3
 AA84=Calculated Insanity|m|3
 AA85=Hastened Calculated Insanity|m|3
-AA86=Critical Affliction|M|2
-AA87=Destructive Cascade|m|3
+AA86=Combat Stability|m|1
+AA87=Discordant Defiance|m|1
 AA88=Vengeful Spirits|m|3
 AA89=Destructive Fury|m|2
 AA90=Fury of Magic|m|2
@@ -106,7 +106,7 @@ AA103=Doppel ganger's Beckon|m|3
 AA104=Mana Overburn|m|3
 AA105=Mind Over Matter|m|3
 AA106=Nightmare Stasis|m|3
-AA107=Pet Affinity|M|2
+AA107=General Sturdiness|m|1
 AA108=Pet Discipline|M|3
 AA109=Persistent Minion|M|2
 AA110=Summon Companion|m|2
@@ -124,9 +124,9 @@ AA121=Companion's Agility|m|3
 AA122=Companion's Relocation|m|3
 AA123=Hastened Companion's Relocation|m|3
 AA124=Quickened Suspend Minion|m|3
-AA125=Permanebt Illusion|M|3
+AA125=Natural Durability|M|1
 AA126=Project Illusion|M|3
-AA127=Sanguine Mind Crystal|M|3
+AA127=Expansive Mind|m|2
 AA128=Azure Mind Crystal|M|3
 AA129=Intrinsic Efficiency|M|2
 AA130=Hastened First Spire of Enchantment|m|3
@@ -134,7 +134,7 @@ AA131=Hastened Third Spire of Enchantment|m|3
 AA132=Profound Visage|M|3
 AA133=Edict of Command|M|3
 AA134=Dire Charm|M|3
-AA135=Total Domination|m|3
+AA135=Mental Clarity|m|2
 AA136=Hastened Divine Companion Aura|m|3
 AA137=Hastened Edict of Command|m|3
 AA138=Identify|M|3
@@ -153,7 +153,7 @@ AA150=Planar Power|M|1
 AA151=Planar Agility|m|1
 AA152=Planar Charisma|m|1
 AA153=Planar Dexterity|m|1
-AA154=Planar Intelligence|m|1
+AA154=Combat Agility|m|1
 AA155=Planar Stamina|m|1
 AA156=Planar Strength|m|1
 AA157=Planar Wisdom|m|1
@@ -161,7 +161,7 @@ AA158=ForcefulRejuvenation|M|2
 AA159=SilentCasting|M|2
 AA160=SummonCompanion|M|2
 AA161=DivineCompanionAura|M|2
-AA162=Staff Block|m|2
+AA162=Mental Stamina|m|2
 AA163=Spell Casting Expertise
 AA164=Mastery of the Past|m|2
 AA165=Arcane Tongues|m|2
